--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,3 +68,23 @@ footer a {
 section {
     padding: 60px;
 }
+
+/*Hero Style*/
+.hero {
+    background-image: url("../images/hero-bg.jpg");
+    height: 600px;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+}
+
+.hero-form {
+    background-color: #fce138;
+    color: #024e76;
+    padding: 20px;
+    width: 500px;
+    border: #024e76 solid 3px;
+    position: absolute;
+    bottom: 120px;
+    right: 140px;
+}
