--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,16 +88,13 @@ section {
     bottom: 120px;
     right: 140px;
 }
-
 .hero-form h3 {
     margin: 0;
     font-size: 24px;
 }
-
 .hero-form p {
     margin: 5px 0 15px 0;  
 }
-
 .form-input {
     border: 1px solid #024e76;
     display: block;
@@ -107,11 +104,9 @@ section {
     width: 100%;
     margin-bottom: 15px;
 }
-
 .hero-form label {
     margin: 0 5px;
-  }
-
+}
 .hero-form button {
     background-color: #024e76;
     color: #fce138;
@@ -124,7 +119,6 @@ section {
 .intro {
     text-align: center;
 }
-
 .intro p {
     line-height: 1.7;
     color: #39a6b2;
@@ -141,11 +135,9 @@ section {
     display: inline-block;
     border-bottom: 3px solid;
 }
-
 .primary-border {
     border-color: #fce138;
 }
-  
 .secondary-border {
     border-color: #39a6b2;
 }
@@ -174,5 +166,48 @@ section {
 .steps span {
     font-size: 38px;
 }
+
+/*Trainers section*/
+.trainers {
+    text-align: center;
+}
+
+.trainer {
+    width: 900px;
+    margin: 0 auto 30px auto;
+    background: #024e76;
+    color: #fce138;
+    overflow: auto;
+}
+.trainer img {
+    width: 35%;
+    float: left;
+}
+.trainer-bio {
+    padding: 35px;
+    float: left;
+    width: 65%;
+}
+.trainer-bio h3 {
+    font-size: 32px;
+    margin-bottom: 8px;
+}
+.trainer-bio h4 {
+    font-weight: lighter;
+    font-size: 26px;
+    margin-bottom: 25px;
+}
+.trainer-bio p {
+    font-size: 17px;
+    line-height: 1.3;
+}
+
+.text-left {
+    text-align: left;
+}
+.text-right {
+    text-align: right;
+}
+
 
     
