--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -241,6 +241,50 @@ section {
     justify-content: space-around;
 }
 
+/* serviceplan */
+.services {
+    background: #fce138;
+}
+.service-grid-wrapper {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+.service-grid-container {
+    display: grid;
+    grid-template-columns: 1fr repeat(2, 4fr);
+    grid-template-rows: repeat(5, 1fr) 2fr;
+    width: 80%;
+    background: lightyellow;
+    border: 2px solid #024e76;
+    color: #024e76;
+    font-size: 18px;
+}
+.service-grid-item {
+    padding: 15px;
+    border: 2px solid #024e76;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+.service-grid-item.basic {
+    grid-column: 2 / span 1;
+}
+.service-grid-item.both {
+    grid-column: 2 / span 2;
+}
+.service-grid-item.cancel {
+    transform: rotate(180deg);
+    writing-mode: vertical-lr;
+    grid-row: 1 / -1;
+}
+.grid-head, .grid-price, .service-grid-item.cancel {
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
+
+/* contact sectiuon */
 .contact {
     background: #024e76;
   }
@@ -372,6 +416,23 @@ section {
     
       .step-text {
         flex: 100%;  
+      }
+
+      /* screen size for service table */
+      .service-grid-container {
+          grid-template-columns: 1fr 1fr;
+      }
+      .service-grid-item.basic {
+          grid-column: 1;
+      }
+      .service-grid-item.both {
+          grid-column: 1 / -1;
+      }
+      .service-grid-item.cancel {
+          transform: none;
+          writing-mode: unset;
+          grid-column: 1 / -1;
+          grid-row: -1;
       }
     
 }
