--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -308,20 +308,71 @@ section {
     color: #fce138;
     flex: 1;
 }
-.trainer img {
+.trainer-img {
     width: 100%;
+    min-height: 300px;
+    background-size: cover;
+    display: flex;
+    padding: 15px;
+    align-items: flex-end;
+    position: relative;
+    overflow: hidden;
 }
+.trainer-img::after {
+    content: "";
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(rgba(255, 255, 56, 0.3), #024e76);
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+}
+.trainer:hover .trainer-img::after {
+    opacity: 1;
+    transition: .5s;
+}
+.trainer-img h3 {
+    position: relative;
+    z-index: 9000;
+    font-size: 28px;
+    margin-bottom: 5px;
+    top: 200px;
+    transition: .6s;
+}
+.trainer-img h4 {
+    position: relative;
+    z-index: 9000;
+    font-size: 22px;
+    top: 200px;
+    transition: .6s;
+}
+.trainer:hover .trainer-img h3, .trainer:hover .trainer-img h4 {
+    top: 0;
+}
+.trainer-1 {
+    background-image: url(../images/trainer-1.jpg);
+}
+.trainer-2 {
+    background-image: url(../images/trainer-2.jpg);
+}
+.trainer-3 {
+    background-image: url(../images/trainer-3.jpg);
+}
+
 .trainer-bio {
     padding: 25px;
     line-height: 1.3;
 }
 .trainer-bio h3 {
     font-size: 28px;
+    display: none;
 }
 .trainer-bio h4 {
     font-weight: lighter;
     font-size: 22px;
     margin-bottom: 15px;
+    display: none;
 }
 .trainer-bio p {
     font-size: 17px;
@@ -522,6 +573,14 @@ section {
     
       .step-text {
         flex: 100%;  
+      }
+
+      /* screen size for trainers */
+      .trainer-img::after, .trainer-img h3, .trainer-img h4 {
+          display: none;
+      }
+      .trainer-bio h3, .trainer-bio h4 {
+          display: inherit;
       }
 
       /* screen size for service table */
